Fixing wrapping of long terms

--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@
     margin-bottom: 10px;
     display: inline-block;
     font-size: 25px;
+    overflow-wrap: break-word;
+    max-width: 300px;
 }
 
 .category {
